; ModuleID = '/home/carl/AnghaBench/linux/drivers/gpio/extr_gpio-lpc18xx.c_lpc18xx_gpio_remove.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/gpio/extr_gpio-lpc18xx.c_lpc18xx_gpio_remove.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.platform_device = type { i32 }
%struct.lpc18xx_gpio_chip = type { i32, %struct.TYPE_2__* }
%struct.TYPE_2__ = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.platform_device*)* @lpc18xx_gpio_remove to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @lpc18xx_gpio_remove(%struct.platform_device* %0) #0 {
  %2 = alloca %struct.platform_device*, align 8
  %3 = alloca %struct.lpc18xx_gpio_chip*, align 8
  store %struct.platform_device* %0, %struct.platform_device** %2, align 8
  %4 = load %struct.platform_device*, %struct.platform_device** %2, align 8
  %5 = call %struct.lpc18xx_gpio_chip* @platform_get_drvdata(%struct.platform_device* %4)
  store %struct.lpc18xx_gpio_chip* %5, %struct.lpc18xx_gpio_chip** %3, align 8
  %6 = load %struct.lpc18xx_gpio_chip*, %struct.lpc18xx_gpio_chip** %3, align 8
  %7 = getelementptr inbounds %struct.lpc18xx_gpio_chip, %struct.lpc18xx_gpio_chip* %6, i32 0, i32 1
  %8 = load %struct.TYPE_2__*, %struct.TYPE_2__** %7, align 8
  %9 = icmp ne %struct.TYPE_2__* %8, null
  br i1 %9, label %10, label %17

10:                                               ; preds = %1
  %11 = load %struct.lpc18xx_gpio_chip*, %struct.lpc18xx_gpio_chip** %3, align 8
  %12 = getelementptr inbounds %struct.lpc18xx_gpio_chip, %struct.lpc18xx_gpio_chip* %11, i32 0, i32 1
  %13 = load %struct.TYPE_2__*, %struct.TYPE_2__** %12, align 8
  %14 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %13, i32 0, i32 0
  %15 = load i32, i32* %14, align 4
  %16 = call i32 @irq_domain_remove(i32 %15)
  br label %17

17:                                               ; preds = %10, %1
  %18 = load %struct.lpc18xx_gpio_chip*, %struct.lpc18xx_gpio_chip** %3, align 8
  %19 = getelementptr inbounds %struct.lpc18xx_gpio_chip, %struct.lpc18xx_gpio_chip* %18, i32 0, i32 0
  %20 = load i32, i32* %19, align 8
  %21 = call i32 @clk_disable_unprepare(i32 %20)
  ret i32 0
}

declare dso_local %struct.lpc18xx_gpio_chip* @platform_get_drvdata(%struct.platform_device*) #1

declare dso_local i32 @irq_domain_remove(i32) #1

declare dso_local i32 @clk_disable_unprepare(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
